# FragIncRNA

./: CMakeLists.txt  README.md  config.toml  run.sh
.github/workflows/: cmake-single-platform.yml
build-codex/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  cmake_install.cmake
src/: config.cpp  config.hpp  fragmenter.cpp  fragmenter.hpp  ibf_index.cpp  ibf_index.hpp  logger.cpp  logger.hpp  main.cpp  query_processor.cpp  query_processor.hpp
tests/unit/: test_main.cpp
